--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@
 	/*height: 1000px;
 	width: 800px;*/
 }
+
+#respiratory_prescriptions {
+	top:40px;
+	bottom: 100px; 
+	left: 100px;
+	right: 100px;
+	/*height: 1000px;
+	width: 800px;*/
+}
