--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,54 @@
+.page {
+    width: 1420px;
+    background-color: #f9f0db;
+    /* margin: auto */
+    padding: 50px;
+    padding-top: 35px;
+}
+
+.vis-container {
+    width: 100%;
+}
+
+.description-right {
+    padding-left: 20px;
+}
+
+.description-left {
+    padding-right: 20px;
+}
+
+.pure-g {
+    margin-bottom: 40px;
+}
+
 #choropleth_map {
-	top:20px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+	top:10px;
+	bottom: 10px; 
+	left: 10px;
+	right: 10px;
 	/*height: 1000px;
 	width: 800px;*/
 }
 
 #respiratory_prescriptions {
-	top:40px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+	top:10px;
+	bottom: 10px; 
+	left: 10px;
+	right: 10px;
 }
 
 #ignitions {
-	top:40px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+	top:10px;
+	bottom: 10px; 
+	left: 10px;
+	right: 10px;
 }
 
 #buildings {
-	top:40px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+	top:10px;
+	bottom: 10px; 
+	left: 10px;
+	right: 10px;
 }
+
