--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 	padding-left: 10px; /* Adjust this value as needed */
 }
 
-.pure-u-1-1 p {
+.pure-u-1-1 h2 {
 	padding-left: 10px; /* Adjust this value as needed */
 }
 
