--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,24 @@
 }
 
 .description-right {
-    padding-right: 5px;
+    padding-right: 15px;
+	text-align: justify;
+  	text-justify: inter-word;
+	line-height: 1.6;
 }
 
 .description-top-left1 {
     padding-right: 10px;
 	padding-left: 10px;
-	padding-top: 25x;
+	padding-top: 0px;
+	line-height: 1.6;
 	
+}
+
+.description-top-left2 {
+	padding-left: 20px;
+	padding-top: 25x;
+	line-height: 1.6;
 }
 
 .aligned-paragraph{
@@ -40,10 +50,7 @@
   	text-justify: inter-word;
 }
 
-.description-top-left2 {
-	padding-left: 20px;
-	padding-top: 25x;
-}
+
 
 .description-bottom-left {
     padding-right: 20px;
@@ -51,6 +58,7 @@
 	padding-top: 6px;
 	text-align: justify;
   	text-justify: inter-word;
+	  line-height: 1.6;
 }
 
 .description-bottom-right {
@@ -59,6 +67,7 @@
 	margin-top: 0;
 	text-align: justify;
   	text-justify: inter-word;
+	  line-height: 1.6;
 }
 
 .pure-g {
