--- a/css/styles.css
+++ b/css/styles.css
@@ -36,20 +36,18 @@
 	padding-left: 10px;
 	padding-top: 0px;
 	line-height: 1.6;
+	text-align: justify;
+  	text-justify: inter-word;
 	
 }
 
 .description-top-left2 {
 	padding-left: 20px;
-	padding-top: 25x;
+	padding-top: 0px;
 	line-height: 1.6;
-}
-
-.aligned-paragraph{
 	text-align: justify;
   	text-justify: inter-word;
 }
-
 
 
 .description-bottom-left {
