--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,19 @@
 }
 
 .title {
-	padding-left: 10px; /* Adjust this value as needed */
+	padding-left: 10px;
 	font-family: "Rubik", sans-serif;
 	font-size: 30px;
 	margin-bottom: 10px;
 }
 
 .subtitle {
-	padding-left: 10px; /* Adjust this value as needed */
+	padding-left: 10px;
 	font-family: "Rubik", sans-serif;
 	font-size: 20px;
 	color: rgb(68, 68, 68); 
 	margin-bottom: 10px;
 }
-
 
 .vis-container-top {
     width: 100%;
@@ -127,9 +126,16 @@
 	right: 10px;
 }
 
+.refs h2{
+	padding-left: 10px; 
+	font-family: "Rubik", sans-serif;
+	color: rgb(48, 48, 48); 
+	margin-bottom: 10px;
+}
 
-
-
-/* input[type="range"] {
-margin-left: 60px; 
-} */
+.refs p{
+	padding-left: 10px; 
+	font-family: "Rubik", sans-serif;
+	color: rgb(48, 48, 48); 
+	font-size: 10px;
+}
